@@ -5,6 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:id="@+id/prompt_pos"
+        />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
